fix: change text alignment of user input title to justify for improved layout

--- a/src/components/devsolar/estructure/body/main/faq_section_ds.module.css
+++ b/src/components/devsolar/estructure/body/main/faq_section_ds.module.css
@@ -393,7 +393,7 @@
 }
 
 .userInputTitle {
-    text-align: center;
+    text-align: justify;
     font-size: 1.1rem;
     color: var(--footer-color);
     margin-top: 0;
